# BWINF_42_2

Siedler/: CMakeLists.txt
Siedler/Dokumentation/: Siedler.aux  Siedler.dvi  Siedler.out  Siedler.tex  Siedler.toc
Siedler/include/: Geometrie.h
Siedler/inputs/: meine1.txt  meine2.txt
Siedler/src/: main.cpp
Siedler/src/ideen/: idee_Algo_Gesundheitszentrum.odt
Stilvolle_Paeckchen/: a.out  main.cpp
